@@ -7,14 +7,13 @@ public class Sunflower extends Plant {
 
     Timer sunProduceTimer;
 
-    public Sunflower(GamePanel parent,int x,int y) {
+    public Sunflower(Panel parent, int x, int y) {
         super(parent, x, y);
-        sunProduceTimer = new Timer(15000,(ActionEvent e) -> {
-            Sun sta = new Sun(gp,60 + x*100,110 + y*120,130 + y*120);
-            gp.activeSuns.add(sta);
-            gp.add(sta,new Integer(1));
-        }
-        );
+        sunProduceTimer = new Timer(15000, (ActionEvent e) -> {
+            Sun sta = new Sun(p, 60 + x * 100, 110 + y * 120, 130 + y * 120);
+            p.activeSuns.add(sta);
+            p.add(sta, Integer.valueOf(1));
+        });
         sunProduceTimer.start();
     }
 
